ADD localization for tr lang && google_navbar package

--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
+  google_nav_bar: ^5.0.5
 
 dev_dependencies:
   bloc_test: ^9.0.2
