--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
     sdk: flutter
   intl: ^0.17.0
   google_nav_bar: ^5.0.5
+  authentication_repository:
+    path: authentication_repository/
 
 dev_dependencies:
   bloc_test: ^9.0.2
