--- a/client/l10n.yaml
+++ b/client/l10n.yaml
@@ -1,4 +1,4 @@
-yarb-dir: lib/l10n/arb
+arb-dir: lib/l10n/arb
 template-arb-file: app_en.arb
 output-localization-file: app_localizations.dart
 nullable-getter: false
