--- a/client/packages/authentication_repository/pubspec.yaml
+++ b/client/packages/authentication_repository/pubspec.yaml
@@ -9,12 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core:
-  firebase_auth:
-  equatable:
+  firebase_core: ^1.11.0
+  firebase_auth: ^3.3.5
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   very_good_analysis: ^2.4.0
-  mocktail:
+  mocktail: ^0.2.0
