ADD onboarding, landing page without design

--- a/client/packages/post_repository/pubspec.yaml
+++ b/client/packages/post_repository/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cloud_functions: ^3.2.5
   equatable: ^2.0.3
   firebase_core: ^1.11.0
+  firebase_remote_config: ^2.0.0
 
 dev_dependencies:
   flutter_test:
