--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -20,6 +20,13 @@ dependencies:
   intl: ^0.17.0
   google_nav_bar: ^5.0.5
   infinite_scroll_pagination: ^3.1.0
+  flutter_tags_x: ^1.0.0
+  go_router: ^3.0.1
+  introduction_screen: ^2.1.0
+  shared_preferences: ^2.0.12
+  sizer: ^2.0.15
+  multiavatar: ^0.1.5
+  flutter_svg: ^1.0.3
 
   authentication_repository:
     path: packages/authentication_repository/
